# mimalloc-bench

./: README.md  SH8BENCH.C  bench.sh  benchres_complete.csv  build-bench-env.sh  cfrac_results_all.csv  check_libs.sh  final_cfrac_results.csv  fix_bench_v3.py  fix_bench_v5.py  graph_many.py  graphs.py  modify_sh8.py  run_all_cfrac.sh  run_all_cfrac_2.sh
bench/: CMakeLists.txt
bench/alloc-test/: allocator_tester.h  test_common.cpp  test_common.h
bench/espresso/: port.h
bench/shbench/: sh6bench.patch  sh8bench.patch
doc/: ALLOCATORS.md
patches/: ffmalloc_haiku.patch  gperftools_haiku.patch  hardened_malloc_haiku.patch  iso_alloc_haiku.patch  jemalloc_haiku.patch  lean_alpine.patch  lean_haiku.patch  mimalloc_haiku.patch  openbsd_malloc_haiku.patch  openbsd_malloc_linux.patch  rocksdb_build.patch  rpmalloc_python313.patch  slimguard_haiku.patch  snmalloc_haiku.patch  tbb_cmake_minimum.patch  tbb_haiku.patch
scripts/: bencher.dev.py  haiku-time.c
temp_shbench/: sh6bench.c
